WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
233932
ActiveDOMObject::suspendIfNeeded() should not be called in the WebAnimation constructor
https://bugs.webkit.org/show_bug.cgi?id=233932
Summary
ActiveDOMObject::suspendIfNeeded() should not be called in the WebAnimation c...
Antoine Quint
Reported
2021-12-07 09:38:20 PST
ActiveDOMObject::suspendIfNeeded() should not be called in the WebAnimation constructor
Attachments
Patch
(1.84 KB, patch)
2021-12-07 09:39 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Patch
(5.63 KB, patch)
2021-12-07 13:12 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-12-07 09:39:24 PST
Created
attachment 446191
[details]
Patch
Chris Dumez
Comment 2
2021-12-07 09:40:15 PST
Comment on
attachment 446191
[details]
Patch r=me
Antoine Quint
Comment 3
2021-12-07 12:54:11 PST
I know what's wrong with the mac-AS-debug-wk2 bot, moving the call to suspendIfNeeded() in the WebAnimation::create() calls means that WebAnimation subclasses are no longer calling suspendIfNeeded().
Antoine Quint
Comment 4
2021-12-07 13:12:32 PST
Created
attachment 446227
[details]
Patch
EWS
Comment 5
2021-12-07 22:30:08 PST
Committed
r286642
(
244955@main
): <
https://commits.webkit.org/244955@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 446227
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-12-07 22:31:19 PST
<
rdar://problem/86192916
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug